--- a/styles.html
+++ b/styles.html
@@ -8,12 +8,12 @@
     <body>
         <h1>Assignment 03B</h1>
         <p>Tärkeetä tekstiä</p>
-        <div>
-          <ol>
+        <div class="myDiv">
+          <ol type= "A">
               <li>First item</li>
               <li>Second item</li>
           </ol>
-          <ul>
+          <ul style="list-style-type:square">
               <li>First item 2</li>
               <li>Second item 2</li>
           </ul>
