--- a/styles.html
+++ b/styles.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel=’’stylesheet’’ href="styles.css">
+        <link rel="stylesheet" href="styles.css">
         <title>Värejä</title>
-        <meta charset=’’utf-8’’ />
+        <meta charset="utf-8" />
     </head>
     <body>
         <h1>Assignment 03B</h1>
